chore(refactor):refactor the codebase for better quality
- improved validations for the various routes
- add sanitizers for all input before they enter database
- improved access control for the various routes
- write integration tests for the updates made to controllers
- implement feedback on Swagger UI

[Finishes #165580059]
